--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="Gimnasio centrico localizado Santa Maria Catamarca destinado al Crossfit">
     <meta name="keywords" content="GYM, GIMNASIO, SANTA MARIA, CATAMARCA, CROSSFIT, TRAINING">
     <title>Fenix gym</title>
-    <link rel="stylesheet" href="./css/destino.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8f3d06ba97.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/destino.css">
 </head>
 
 <body>
@@ -18,26 +19,29 @@
         <section>
             <div class="imagenMenu">
                 <img class="fondo" src="./img/header.jpg" alt="fenix-gym" />
-                <div class="">
+                <div class="barra">
                     <nav class="navbar navbar-expand-lg navbar-light">
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
+                            <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse textoMenu" id="navbarNav">
-                            <ul class="navbar-nav menu">
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#">Unite <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
+                                    <a class="nav-link" href="#">Quienes somos</a>
+                                </li>
+                                <li class="nav-item item-logo">
+                                    <a href="./index.html"><img class="logoHeader" src="./img/LOGO FNX BLANCO.png" href="./index.html" alt="logo" /></a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Pricing</a>
+                                    <a class="nav-link" href="#">Planes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Pricing</a>
+                                    <a class="nav-link" href="#">Contactanos</a>
                                 </li>
                             </ul>
                         </div>
@@ -45,9 +49,11 @@
                 </div>
                 <div class="contenedorIconos">
                     <div class="iconosContenido animate__animated animate__bounce ">
-                        <i class="fab fa-instagram iconos "></i>
-                        <i class="fab fa-facebook-f iconos"></i>
-                        <i class="fab fa-spotify iconos"></i>
+                        <a href="#"><i class="fab fa-instagram iconos "></i></a>
+                        <a href="http://"><i class="fab fa-facebook-f iconos"></i></a>
+                        <a href="http://"><i class="fab fa-spotify iconos"></i></a>
+
+
                     </div>
                 </div>
                 <div class="principal">
@@ -56,12 +62,13 @@
                     </h1>
                     <button class="botonPrimario"><a class="textoBoton" href="">Quiero Unirme hoy</a></button>
                 </div>
+
             </div>
 
         </section>
     </header>
 
-    <section class="section-padre">
+    <section class="section-padre container">
         <div class="section2 row">
             <div class="img1 col-sm-12 col-md-3">
                 <img class="imgInfo" src="./img/pngwing.com.png" alt="fenix gym mujer" srcset="" />
@@ -72,7 +79,7 @@
                 </p>
                 <p>
                     <a class="btn btn-primary botonInfo col-12" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                      Link with href
+                      Mas info
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
@@ -89,7 +96,7 @@
                 </p>
                 <p>
                     <a class="btn btn-primary botonInfo col-12" data-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Link with href
+                        Mas info
                     </a>
                 </p>
                 <div class="collapse" id="collapse2">
