--- a/index.html
+++ b/index.html
@@ -15,57 +15,47 @@
 </head>
 
 <body>
-    <header>
-        <section>
-            <div class="imagenMenu">
-                <img class="fondo" src="./img/header.jpg" alt="fenix-gym" />
-                <div class="barra">
-                    <nav class="navbar navbar-expand-lg navbar-light">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="./index.html"><img src="./img/LOGO FNX BLANCO.png" width="180px" alt="" srcset=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse textoMenu" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Unite <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Quienes somos</a>
-                                </li>
-                                <li class="nav-item item-logo">
-                                    <a href="./index.html"><img class="logoHeader" src="./img/LOGO FNX BLANCO.png" href="./index.html" alt="logo" /></a>
-                                </li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Unite</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="contenedorIconos">
+            <div class="iconosContenido animate__animated animate__bounce ">
+                <a href="#"><i class="fab fa-instagram iconos "></i></a>
+                <a href="http://"><i class="fab fa-facebook-f iconos"></i></a>
+                <a href="http://"><i class="fab fa-spotify iconos"></i></a>
+            </div>
+        </div>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Planes</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contactanos</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-                <div class="contenedorIconos">
-                    <div class="iconosContenido animate__animated animate__bounce ">
-                        <a href="#"><i class="fab fa-instagram iconos "></i></a>
-                        <a href="http://"><i class="fab fa-facebook-f iconos"></i></a>
-                        <a href="http://"><i class="fab fa-spotify iconos"></i></a>
-
-
-                    </div>
-                </div>
-                <div class="principal">
-                    <h1 class="textoPrincipal">
-                        Hoy es el primer dia <br /> del resto de tu vida
-                    </h1>
-                    <button class="botonPrimario"><a class="textoBoton" href="">Quiero Unirme hoy</a></button>
-                </div>
+        <div class="principal container">
+            <div class="row">
+                <h1 class="textoPrincipal col-md-6 col-sm-12 ">
+                    Hoy es el primer dia <br /> del resto de tu vida
+                </h1>
+                <button class="botonPrimario col-md-6 col-sm-12"><a class="textoBoton" href="">Quiero Unirme hoy</a></button>
 
             </div>
-
-        </section>
+        </div>
     </header>
 
     <section class="section-padre container">
