--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contactanos.html">Contacto</a>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="img1 col-sm-12 col-md-3">
-                <img class="imgInfo" src="./img/pngwing.com.png" alt="fenix gym mujer" srcset="" />
+                <img class="imgInfo" src="./img/depositphotos_12660088-stock-photo-fitness-stretching-exercises.jpg" alt="fenix gym mujer" srcset="" />
             </div>
         </div>
 
