--- a/nosotros.html
+++ b/nosotros.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8f3d06ba97.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./css/destino.css">
 </head>
 
@@ -43,32 +44,43 @@
     <div class="container">
         <div class="row">
             <div class="contenedorContacto col-sm-12 col-md-12">
-                <h1 class="tituloContacto">¡CONTACTANOS AHORA!</h1>
-                <p class="parrafoContacto">Es muy importante para nosotros conocer tu opinion</p>
+                <h1 class="tituloContacto">¡ESTE ES NUESTRO STAFF!</h1>
+                <p class="parrafoContacto">Nos esforzamos todos los dias en hacer tu entrenamiento único</p>
             </div>
         </div>
     </div>
 
 
-    <section class="Contacto">
-        <form class="formularioContacto">
-            <div class="form-group row ">
-                <div class="col-sm-10 col-md-6 ">
-                    <input type="text" class="form-control" id="inputPassword" placeholder="NOMBRE">
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <input type="email" class="form-control" id="inputPassword" placeholder="EMAIL">
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <button class="btn btn-secondary btn-md" type="submit">Submit form</button>
+    <section class="nosotros container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="team text-center rounded p-3 py-4">
+                    <img src="./img/foto perfil.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                    <div class="content mt-3">
+                        <h4 class="title mb-0">Martin</h4>
+                        <small class="text-muted">Fundador</small>
+                    </div>
                 </div>
             </div>
-        </form>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="team text-center rounded p-3 py-4">
+                    <img src="./img/perfil2.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                    <div class="content mt-3">
+                        <h4 class="title mb-0">Paula</h4>
+                        <small class="text-muted">Nutricionista y entrenadora</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="team text-center rounded p-3 py-4">
+                    <img src="./img/foto perfil.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                    <div class="content mt-3">
+                        <h4 class="title mb-0">Luis</h4>
+                        <small class="text-muted">Entrenador</small>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </section>
     <footer class="footer">
         <div>
