--- a/unite.html
+++ b/unite.html
@@ -49,27 +49,29 @@
         </div>
     </div>
 
-
-    <section class="Contacto">
-        <form class="formularioContacto">
-            <div class="form-group row ">
-                <div class="col-sm-10 col-md-6 ">
-                    <input type="text" class="form-control" id="inputPassword" placeholder="NOMBRE">
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <input type="email" class="form-control" id="inputPassword" placeholder="EMAIL">
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <div class="col-sm-10 col-md-6">
-                    <button class="btn btn-secondary btn-md" type="submit">Submit form</button>
+    <section>
+        <div class="container ">
+            <div class="row formularioInscripcion">
+                <div class="col-sm-12 col-md-9 ">
+                    <form action="">
+                        <label class="inputDato" for="">Nombre</label>
+                        <input class="dato" type="text"><br>
+                        <label class="inputDato" for="">Apellido</label>
+                        <input class="dato" type="text"><br>
+                        <label class="inputDato inputDato__email" for="">Email</label>
+                        <input class="dato" type="email"><br>
+                        <label for="">Principiante</label>
+                        <input type="radio" name="nivel" id="">
+                        <label for="">Intermedio</label>
+                        <input type="radio" name="nivel" id="">
+                        <label for="">Avanzado</label>
+                        <input type="radio" name="nivel" id="">
+                    </form>
                 </div>
             </div>
-        </form>
         </div>
-
     </section>
+
     <footer class="footer">
         <div>
             <img src="./img/LOGO FNX BLANCO.png" class="logoFooter" alt="Logo felix gym" srcset="" />
