--- a/Planes.html
+++ b/Planes.html
@@ -17,7 +17,7 @@
 <body>
     <header class="Head">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="./index.html"><img src="./img/LOGO FNX BLANCO.png" class="logoMenu" alt="" srcset=""></a>
+            <a class="navbar-brand" href="./index.html"><img src="./img/LOGO FNX DEGRADEE.png" class="logoMenu" alt="" srcset=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,13 +28,13 @@
                         <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="./contactanos.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Unite</a>
+                        <a class="nav-link" href="./Planes.html">Unite</a>
                     </li>
                 </ul>
             </div>
