--- a/contactanos.html
+++ b/contactanos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Gimnasio centrico localizado Santa Maria Catamarca destinado al Crossfit">
     <meta name="keywords" content="GYM, GIMNASIO, SANTA MARIA, CATAMARCA, CROSSFIT, TRAINING">
-    <title>Fenix gym</title>
+    <title>Fenix gym contacto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8f3d06ba97.js" crossorigin="anonymous"></script>
