--- a/nosotros.html
+++ b/nosotros.html
@@ -35,7 +35,10 @@
                         <a class="nav-link" href="./contactanos.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Planes.html">Unite</a>
+                        <a class="nav-link" href="./Planes.html">Planes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./unite.html">Inscribite</a>
                     </li>
                 </ul>
             </div>
