--- a/Planes.html
+++ b/Planes.html
@@ -70,7 +70,7 @@
                             <li class="list-group-item">Descuento en todos nuestros locales</li>
                             <li class="list-group-item">2 Clases extra</li>
                         </ul>
-                        <button type="button" class="btn  btn-block animate-up-1" tabindex="0">Unirme</button>
+                        <button type="button" onclick="location.href='./unite.html';" class="btn  btn-block animate-up-1" tabindex="0">Unirme</button>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                             <li class="list-group-item">Acceso a locker</li>
 
                         </ul>
-                        <button type="button" class="btn btn-block animate-up-1" tabindex="0">Unirme</button>
+                        <button type="button" onclick="location.href='./unite.html';" class="btn btn-block animate-up-1" tabindex="0">Unirme</button>
                     </div>
 
                 </div>
@@ -127,7 +127,7 @@
                             <li class="list-group-item">Acceso a duchas</li>
                             <li class="list-group-item">Indumentaria gratis</li>
                         </ul>
-                        <button type="button" class="btn btn-tertiary btn-block animate-up-1" tabindex="0">Unirme</button>
+                        <button type="button" onclick="location.href='./unite.html';" class="btn btn-tertiary btn-block animate-up-1" tabindex="0">Unirme</button>
                     </div>
 
                 </div>
