--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </nav>
         <div class="contenedorIconos">
             <div class="iconosContenido animate__animated animate__bounce ">
-                <a href="#"><i class="fab fa-instagram iconos "></i></a>
-                <a href="http://"><i class="fab fa-facebook-f iconos"></i></a>
-                <a href="http://"><i class="fab fa-spotify iconos"></i></a>
+                <a href="http://instagram.com"><i class="fab fa-instagram iconos "></i></a>
+                <a href="http://facebook.com"><i class="fab fa-facebook-f iconos"></i></a>
+                <a href="https://www.spotify.com/ar/"><i class="fab fa-spotify iconos"></i></a>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
             <i class="fab fa-facebook-f iconos"></i>
             <i class="fab fa-spotify iconos"></i>
         </div>
-        <p>Telefono y contacto</p>
+        <p>(3838)600652 Avenida 9 de Julio 600</p>
     </footer>
 
 
