--- a/unite.html
+++ b/unite.html
@@ -69,6 +69,7 @@
                         <input type="radio" name="nivel" id="">
                         <label for="">Avanzado</label>
                         <input type="radio" name="nivel" id="">
+                        <button class="btn btn-secondary btn-md col-sm-10 col-md-6 " type="submit">Enviar</button>
                     </form>
                 </div>
             </div>
