--- a/contactanos.html
+++ b/contactanos.html
@@ -66,7 +66,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="col-sm-10 col-md-6">
-                    <button class="btn btn-secondary btn-md" type="submit">Submit form</button>
+                    <button class="btn btn-secondary btn-md" type="submit">Enviar</button>
                 </div>
             </div>
         </form>
